# libciyu

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
data/: ciyu.pc.in
m4/: .gitignore
src/: ciyu-entry.c  ciyu-entry.h
tests/: .gitignore  ciyu-entry.c  introspection-test.in  introspection-test.py  test-ciyu-entry.c  test-ciyu.py
