# Point to our macro directory and pick up user flags from the environment
ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}
AUTOMAKE_OPTIONS = subdir-objects


# -- Common build flags --------------
AM_CFLAGS = $(GLIB_CFLAGS) $(GOBJECT_CFLAGS) -I$(top_srcdir)/src
AM_LDFLAGS = $(GLIB_LIBS) $(GOBJECT_LIBS)


# -- Library -------------------------
lib_LTLIBRARIES = src/libciyu.la

src_libciyu_la_SOURCES = \
	src/ciyu-entry.c \
	$(NULL)

src_libciyu_la_include_HEADERS = \
	src/ciyu-entry.h \
	$(NULL)

src_libciyu_la_includedir = $(includedir)/ciyu


# -- Introspection -------------------
-include $(INTROSPECTION_MAKEFILE)

if HAVE_INTROSPECTION
INTROSPECTION_SCANNER_ARGS = --add-include-path=$(srcdir)
INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)

introspection_files = $(src_libciyu_la_SOURCES) $(src_libciyu_la_include_HEADERS)

src_Ciyu-0.1.gir: $(INTROSPECTION_SCANNER) src/libciyu.la Makefile
src_Ciyu_0_1_gir_NAMESPACE = Ciyu
src_Ciyu_0_1_gir_VERSION = $(VERSION)
src_Ciyu_0_1_gir_SCANNERFLAGS = \
	--warn-all \
	$(NULL)
src_Ciyu_0_1_gir_CFLAGS = \
	$(AM_CFLAGS) \
	$(NULL)

src_Ciyu_0_1_gir_INCLUDES = GObject-2.0
src_Ciyu_0_1_gir_PACKAGES = gobject-2.0
src_Ciyu_0_1_gir_LIBS = src/libciyu.la
src_Ciyu_0_1_gir_FILES = $(introspection_files)
src_Ciyu_0_1_gir_EXPORT_PACKAGES = ciyu

INTROSPECTION_GIRS = src/Ciyu-0.1.gir
girdir = $(datadir)/gir-1.0
gir_DATA = $(INTROSPECTION_GIRS)

typelibsdir = $(libdir)/girepository-1.0
typelibs_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
endif #HAVE_INTROSPECTION


# -- Tests ---------------------------
check_PROGRAMS = \
	tests/ciyu_entry \
	$(NULL)

check_SCRIPTS = \
	tests/introspection-test
	$(NULL)

# some test bash script variables
if HAVE_INTROSPECTION
SH_HAVE_INTROSPECTION_ASSIGN="HAVE_INTROSPECTION=1"
else
SH_HAVE_INTROSPECTION_ASSIGN="HAVE_INTROSPECTION=0"
endif

if HAVE_PYTHON
SH_HAVE_PYTHON_ASSIGN="HAVE_PYTHON=1"
else
SH_HAVE_PYTHON_ASSIGN="HAVE_PYTHON=0"
endif

# variables of ordinary C unit test
tests_ciyu_entry_SOURCES = tests/ciyu-entry.c
tests_ciyu_entry_LDADD = src/libciyu.la

# generate bash script test
tests/introspection-test:
	@echo "#!/bin/sh" > tests/introspection-test
	@echo >> tests/introspection-test
	@echo "# This script is generated by Makefile.am" >> tests/introspection-test
	@echo "# DO NOT EDIT" >> tests/introspection-test
	@echo >> tests/introspection-test
	@echo "export LD_LIBRARY_PATH=$(srcdir)/src:$(srcdir)/src/.libs" >> tests/introspection-test
	@echo "export GI_TYPELIB_PATH=$(srcdir)/src" >> tests/introspection-test
	@echo "TEST_PY=$(srcdir)/tests/introspection-test.py" >> tests/introspection-test
	@echo "PYTHON=$(PYTHON)" >> tests/introspection-test
	@echo $(SH_HAVE_INTROSPECTION_ASSIGN) >> tests/introspection-test
	@echo $(SH_HAVE_PYTHON_ASSIGN) >> tests/introspection-test
	@echo "PYTHON=$(PYTHON)"
	@echo >> tests/introspection-test
	@cat $(srcdir)/tests/introspection-test.in >> tests/introspection-test
	@chmod u+x tests/introspection-test

# tell test-driver to test them all
TESTS = $(check_PROGRAMS) $(check_SCRIPTS)


# -- Common --------------------------
CLEANFILES = \
	$(gir_DATA) \
	$(typelib_DATA) \
	$(check_SCRIPTS) \
	$(NULL)

EXTRA_DIST = \
	autogen.sh \
	README.md \
	$(NULL)

