AC_PREREQ(2.63)
AC_INIT([libciyu], [0.1], [https://github.com/Cangjians/libciyu/issues], [libciyu], [https://github.com/Cangjians/libciyu])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11 no-dist-gzip dist-xz tar-ustar foreign])
AC_PROG_MKDIR_P

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

# Initialize libtool
LT_INIT([disable-static])

# OUTPUT files
AC_CONFIG_FILES([
  Makefile
])


AC_OUTPUT
